Server: catalog service tests added